# simple-summarizer

model-provider/: .gitignore  README.md  main.py  pyproject.toml  utils.py
tg-bot/: README.md  app.js  package-lock.json  package.json  parsing.js  parsing.ts  summarization.js  summarization.ts  utils.js  utils.ts
tg-bot/src/: app.ts  pagination.ts  parsing.ts  summarization.ts
